update with rereco samples for legacy paper

--- a/HIGGS/VertexStudies/lxbatch_scripts/TMVA_check_ZmumuData_TEMPLATE.cfg
+++ b/HIGGS/VertexStudies/lxbatch_scripts/TMVA_check_ZmumuData_TEMPLATE.cfg
@@ -34,7 +34,8 @@ puweightsFileName  =  weights.root
 
 
 useJSON            =  1  
-jsonFileName       = /afs/cern.ch/user/m/malberti/scratch0/HGG/CMSSW_5_3_3_patch2/src/HggAnalysis/VertexStudies/pileup/Cert_RunABCD_forMoriond_Collisions12_JSON.txt
+jsonFileName       = /afs/cern.ch/work/m/malberti/HGG/LegacyPaper/CMSSW_5_3_10/src/HIGGS/VertexStudies/pileup/Cert_190456-208686_8TeV_22Jan2013ReReco_Collisions12_JSON.txt
+#jsonFileName       = /afs/cern.ch/user/m/malberti/scratch0/HGG/CMSSW_5_3_3_patch2/src/HggAnalysis/VertexStudies/pileup/Cert_RunABCD_forMoriond_Collisions12_JSON.txt
 #jsonFileName       = /afs/cern.ch/user/m/malberti/scratch0/HGG/CMSSW_5_3_3_patch2/src/HggAnalysis/VertexStudies/pileup/Cert_RunABC_forHCP_Collisions12_JSON_MuonPhys.txt
 #jsonFileName       = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions12/8TeV/Prompt/Cert_190456-203002_8TeV_PromptReco_Collisions12_JSON_MuonPhys.txt
 #jsonFileName       = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions12/8TeV/Reprocessing/Cert_190456-196531_8TeV_13Jul2012ReReco_Collisions12_JSON_MuonPhys.txt
